# AdventOfCodeTemplate

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  aoc.natjmc  aoc.natvis  launch.vs.json
CMake/: SetupMSVC.cmake
src/: CMakeLists.txt  buildnumber.ixx  days.ixx  main.cpp
src/Week01/: day01.cpp  day01.ixx  day02.cpp  day02.ixx  day03.cpp  day03.ixx  day04.cpp  day04.ixx  day05.cpp  day05.ixx  day06.cpp  day06.ixx  day07.cpp  day07.ixx
src/Week02/: day08.cpp  day08.ixx  day09.cpp  day09.ixx  day10.cpp  day10.ixx  day11.cpp  day11.ixx  day12.cpp  day12.ixx  day13.cpp  day13.ixx  day14.cpp  day14.ixx
src/Week03/: day15.cpp  day15.ixx  day16.cpp  day16.ixx  day17.cpp  day17.ixx  day18.cpp  day18.ixx  day19.cpp  day19.ixx  day20.cpp  day20.ixx  day21.cpp  day21.ixx
src/Week04/: day22.cpp  day22.ixx  day23.cpp  day23.ixx  day24.cpp  day24.ixx  day25.cpp  day25.ixx
src/utils/: CMakeLists.txt  aoc.ixx  cube.ixx  debug.ixx  graph.ixx  grid.ixx  grid2d.ixx  helpers.ixx  math.ixx  polygon.ixx  ppm.ixx  print.ixx  readfile.ixx  scratch.txt  sprite.ixx  standard.h  stringhelper.ixx  stringsplit.ixx  tree.ixx  types.ixx  vec.ixx  walker.ixx
